# team-orkhan-01

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  team-orkhan-01.sln  team-orkhan-01.vcxproj  team-orkhan-01.vcxproj.filters  vcpkg.json
src/: App.cpp  App.hpp  MainFrame.cpp  MainFrame.hpp
src/Frame/: MainFrame.cpp  MainFrame.hpp
src/View/: KeypadWidget.cpp  KeypadWidget.h
